syntax = "proto3";
package billing;

option java_multiple_files = true;
option java_package= "billing";

service BillingService{
  rpc createInvoice (InvoiceRequest) returns (InvoiceResponse);
}

message InvoiceRequest{
  string patientId = 1;
  string amount = 2;
}

message InvoiceResponse {
  string invoiceId = 1;
  string status = 2;
  string remainingAmount = 3;
}